# natscpp

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.py
.github/workflows/: ci.yml  codacy-analysis.yml  conan.yml
cmake/: natsppConfig.cmake.in
include/: nats.hpp
proto/: message.proto
scripts/: test.sh
src/: main.cpp  nats.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
tests/: test_nats.cpp
